--- a/app/globals.css
+++ b/app/globals.css
@@ -135,5 +135,5 @@ pre {
 body {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
